objects/FieloEE__RedemptionRule__c.object
<CustomObject>
    <description>Arbitrary groups to which members can belong. You can create segments by age, by location, etc.</description>
    <fields>
        <fullName>FieloEE__Description__c</fullName>
        <description>A description for this segment.</description>
        <encryptionScheme>None</encryptionScheme>
        <inlineHelpText>Enter a description for this segment.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>FieloEE__Order__c</fullName>
        <label>Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FieloEE__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Program</label>
        <referenceTo>FieloEE__Program__c</referenceTo>
        <relationshipLabel>Segment</relationshipLabel>
        <relationshipName>Segment</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloEE__isActive__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checking this option will make this segment active.</description>
        <inlineHelpText>Check this option in order to activate this segment.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Segment</label>
    <listViews>
        <fullName>FieloEE__All_Segments</fullName>
        <columns>NAME</columns>
        <columns>FieloEE__isActive__c</columns>
        <columns>FieloEE__Description__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Segments</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Segment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Segment</pluralLabel>
    <recordTypes>
        <fullName>FieloEE__Dynamic</fullName>
        <active>true</active>
        <description>Once you define the criteria of the segment, when the member performs an operation the system calculates online the memberâ€™s segment.</description>
        <label>Dynamic</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloEE__Manual</fullName>
        <active>true</active>
        <description>The administrator adds manually members to a segment.</description>
        <label>Manual</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>